--- a/pages/gi.html
+++ b/pages/gi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
             <div class="logo"> KNH EMPORIUM </div>
         </a>
         <div class="nav-items">
-        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/img/language.png" alt=language></a>
+        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/asset/img/cs.png" alt=language></a>
         <!-- <a class="Login" href="">Login</a> -->
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/img/Genshin Impact.webp" alt="logogi">
-            <div class="cobaanhidup">
+            <img style="width: 125px;" src="/asset/img/Genshin Impact.webp" alt="logogi">
+            <div class="bio">
                 <h2> Genshin Impact Crystals </h2><br>
                 <h3> Top Up Genshin Imapct Crystal legal cepat dan aman! Top up sekarang juga dapatkan karakter yang kamu ingin kan.
                     Dapat Transaksi Via BCA Dana dan Gopay</h3>
@@ -32,7 +32,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>80</h4>
                 </div>
                 <div class="price">
@@ -41,7 +41,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>330 <em>(300+30)</em></h4>
                 </div>
                 <div class="price">
@@ -50,7 +50,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>1090 <em>(1980+110)</em></h4>
                 </div>
                 <div class="price">
@@ -59,7 +59,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>2240 <em>(1980+260)</em></h4>
                 </div>
                 <div class="price">
@@ -68,7 +68,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>3880 <em>(3280+600)</em></h4>
                 </div>
                 <div class="price">
@@ -77,7 +77,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -86,7 +86,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>2x 8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -95,7 +95,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/botw.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
                     <h4>1xBotW</h4>
                 </div>
                 <div class="price">
@@ -104,7 +104,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/botw.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
                     <h4>2xBotW</h4>
                 </div>
                 <div class="price">
@@ -113,7 +113,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/botw.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
                     <h4>3xBotW</h4>
                 </div>
                 <div class="price">
@@ -122,7 +122,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/botw.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
                     <h4>4xBotW</h4>
                 </div>
                 <div class="price">
@@ -131,7 +131,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/botw.webp" alt="crystals">
+                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
                     <h4>5xBotW</h4>
                 </div>
                 <div class="price">
