--- a/pages/steam.html
+++ b/pages/steam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
             <div class="logo"> KNH EMPORIUM </div>
         </a>
         <div class="nav-items">
-        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/img/language.png" alt=language></a>
+        <a href="https://www.instagram.com/knh.emporium/" target="_blank"><img style="width: 35px;" src="/asset/img/cs.png" alt=language></a>
         <!-- <a class="Login" href="">Login</a> -->
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/img/Steam.jpeg" alt="logosteam">
-            <div class="cobaanhidup">
+            <img style="width: 125px;" src="/asset/img/Steam.jpeg" alt="logosteam">
+            <div class="bio">
                 <h2> Steam Wallet </h2><br>
                 <h3> Top Up Steam Wallet legal cepat dan aman! Dapatkan berbagai game saat itu juga dengan top up di KnH.
                     Dapat Transaksi Via BCA Dana dan Gopay </h3>
@@ -32,7 +32,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 45.000</h4>
                 </div>
                 <div class="price">
@@ -41,7 +41,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 60.000</h4>
                 </div>
                 <div class="price">
@@ -50,7 +50,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 90.000</h4>
                 </div>
                 <div class="price">
@@ -59,7 +59,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 120.000</h4>
                 </div>
                 <div class="price">
@@ -68,7 +68,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 250.000</h4>
                 </div>
                 <div class="price">
@@ -77,7 +77,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>Rp. 400.000</h4>
                 </div>
                 <div class="price">
@@ -86,7 +86,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/img/steamwallet.jpg" alt="crystals">
+                    <img width="30px" src="/asset/img/steamwallet.jpg" alt="crystals">
                     <h4>600.000</h4>
                 </div>
                 <div class="price">
@@ -97,7 +97,7 @@
         <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
             <div>
                 <h2>Order Now</h2>
-                <img width="40px" src="/img/wa.svg" alt="whatsapp">
+                <img width="40px" src="/asset/img/WA.svg" alt="whatsapp">
             </div>
         </a>
     </section> 
